# mircrograd

./: pyproject.toml  sandbox.ipynb
